Actualiza la documentación del Lab 4 para reflejar técnicas avanzadas de temporización, sincronización y análisis de rendimiento en el juego de Snake, incluyendo nuevos objetivos y características destacadas.

--- a/src/content/docs/guides/labTimeline.mdx
+++ b/src/content/docs/guides/labTimeline.mdx
@@ -71,9 +71,9 @@ import {
   <Card title="Lab 4 – Snake Game Part 2" icon="rocket">
     <Badge text="Due Dec 1" variant="caution" size="medium" />
     <small>Due to Thanksgiving break, there is no rush on Nov 25.</small>
-    <p><strong>Objective:</strong> Create an interactive Snake game using FreeRTOS multitasking.</p>
-    <p><strong>Highlights:</strong> Input handling, game logic, software timers, LCD mutex, and sound feedback.</p>
-  {/* <LinkButton href="/labs/lab4/" target="_blank">View Lab 4 →</LinkButton> */}
+    <p><strong>Objective:</strong> Enhance your Snake game with advanced FreeRTOS timing, synchronization, and performance analysis: precise periodic tasks, buffered input, real-time metrics, and robustness.</p>
+    <p><strong>Highlights:</strong> Hardware timer jitter measurement; vTaskDelay vs vTaskDelayUntil comparison; counting semaphore joystick buffer; 10ms chronometer (software timer); wall collisions & game-over animation; stack usage display, optimization & overflow detection.</p>
+  <LinkButton href="/labs/lab4/" target="_blank">View Lab 4 →</LinkButton>
   </Card>
 
   <Card title="Lab 5 – Final System Integration" icon="laptop">
